website/versioned_docs/0.40/upgrading.md
---
id: version-0.40-upgrading
title: upgrading
original_id: upgrading
---
<a id="content"></a><h1><a class="anchor" name="upgrading"></a>Upgrading <a class="hash-link" href="docs/upgrading.html#upgrading">#</a></h1><div><p>Upgrading to new versions of React Native will give you access to more APIs, views, developer tools
and other goodies. Because React Native projects are essentially made up of an Android project, an
iOS project and a JavaScript project, all combined under an npm package, upgrading can be rather
tricky. But we try to make it easy for you. Here's what you need to do to upgrade from an older
version of React Native:</p><h2><a class="anchor" name="upgrade-based-on-git"></a>Upgrade based on Git <a class="hash-link" href="docs/upgrading.html#upgrade-based-on-git">#</a></h2><p><strong>IMPORTANT:</strong> You don't have to install the new version of React Native, it will be installed automatically.</p><p>The module <code>react-native-git-upgrade</code> provides a one-step operation to upgrade the source files with
a minimum of conflicts. Under the hood, it consists in 2 phases:</p><ul><li>First, it computes a Git patch between both old and new template files,</li><li>Then, the patch is applied on the user's sources.</li></ul><h3><a class="anchor" name="1-install-git"></a>1. Install Git <a class="hash-link" href="docs/upgrading.html#1-install-git">#</a></h3><p>Your project doesn't have to be handled by the Git versioning sytem (could be Mercurial, SVN or none)
but Git has to be installed and available in the <code>PATH</code>. You can download Git here:
<a href="https://git-scm.com/downloads">https://git-scm.com/downloads</a></p><h3><a class="anchor" name="2-install-the-react-native-git-upgrade-module"></a>2. Install the <code>react-native-git-upgrade</code> module <a class="hash-link" href="docs/upgrading.html#2-install-the-react-native-git-upgrade-module">#</a></h3><p>It's a CLI tool and must be installed globally:</p><div class="prism language-javascript">$ npm install <span class="token operator">-</span>g react<span class="token operator">-</span>native<span class="token operator">-</span>git<span class="token operator">-</span>upgrade</div><h3><a class="anchor" name="3-run-the-command"></a>3. Run the command <a class="hash-link" href="docs/upgrading.html#3-run-the-command">#</a></h3><p>Run the command to start the process:</p><div class="prism language-javascript">$ react<span class="token operator">-</span>native<span class="token operator">-</span>git<span class="token operator">-</span>upgrade
# Upgrade React Native to the latest version

# Or<span class="token punctuation">:</span>

$ react<span class="token operator">-</span>native<span class="token operator">-</span>git<span class="token operator">-</span>upgrade X<span class="token punctuation">.</span>Y<span class="token punctuation">.</span>Z
# Upgrade React Native to the X<span class="token punctuation">.</span>Y<span class="token punctuation">.</span>Z version</div><p>The templates are upgraded in a optimized way. You still may encounter conflicts but only where the Git
3-way merge have failed, depending on the version and how you modified your sources.</p><h3><a class="anchor" name="4-resolve-the-conflicts"></a>4. Resolve the conflicts <a class="hash-link" href="docs/upgrading.html#4-resolve-the-conflicts">#</a></h3><p>Conflicted files include delimiters which make very clear where the changes come from. For example:</p><div class="prism language-javascript">13B07F951A680F5B00A75B9A <span class="token comment" spellcheck="true">/* Release */</span> <span class="token operator">=</span> <span class="token punctuation">{</span>
  isa <span class="token operator">=</span> XCBuildConfiguration<span class="token punctuation">;</span>
  buildSettings <span class="token operator">=</span> <span class="token punctuation">{</span>
    ASSETCATALOG_COMPILER_APPICON_NAME <span class="token operator">=</span> AppIcon<span class="token punctuation">;</span>
&lt;&lt;&lt;&lt;&lt;&lt;&lt; ours
    CODE_SIGN_IDENTITY <span class="token operator">=</span> <span class="token string">"iPhone Developer"</span><span class="token punctuation">;</span>
    FRAMEWORK_SEARCH_PATHS <span class="token operator">=</span> <span class="token punctuation">(</span>
      <span class="token string">"$(inherited)"</span><span class="token punctuation">,</span>
      <span class="token string">"$(PROJECT_DIR)/HockeySDK.embeddedframework"</span><span class="token punctuation">,</span>
      <span class="token string">"$(PROJECT_DIR)/HockeySDK-iOS/HockeySDK.embeddedframework"</span><span class="token punctuation">,</span>
    <span class="token punctuation">)</span><span class="token punctuation">;</span>
<span class="token operator">===</span><span class="token operator">===</span><span class="token operator">=</span>
    CURRENT_PROJECT_VERSION <span class="token operator">=</span> <span class="token number">1</span><span class="token punctuation">;</span>
<span class="token operator">&gt;</span><span class="token operator">&gt;</span><span class="token operator">&gt;</span><span class="token operator">&gt;</span><span class="token operator">&gt;</span><span class="token operator">&gt;</span><span class="token operator">&gt;</span> theirs
    HEADER_SEARCH_PATHS <span class="token operator">=</span> <span class="token punctuation">(</span>
      <span class="token string">"$(inherited)"</span><span class="token punctuation">,</span>
      <span class="token operator">/</span>Applications<span class="token operator">/</span>Xcode<span class="token punctuation">.</span>app<span class="token operator">/</span>Contents<span class="token operator">/</span>Developer<span class="token operator">/</span>Toolchains<span class="token operator">/</span>XcodeDefault<span class="token punctuation">.</span>xctoolchain<span class="token operator">/</span>usr<span class="token operator">/</span>include<span class="token punctuation">,</span>
      <span class="token string">"$(SRCROOT)/../node_modules/react-native/React/**"</span><span class="token punctuation">,</span>
      <span class="token string">"$(SRCROOT)/../node_modules/react-native-code-push/ios/CodePush/**"</span><span class="token punctuation">,</span>
    <span class="token punctuation">)</span><span class="token punctuation">;</span></div><p>You can think of "ours" as "your team" and "theirs" as "the React Native dev team".</p><h2><a class="anchor" name="alternative"></a>Alternative <a class="hash-link" href="docs/upgrading.html#alternative">#</a></h2><p>Use this only in case the above didn't work.</p><h3><a class="anchor" name="1-upgrade-the-react-native-dependency"></a>1. Upgrade the <code>react-native</code> dependency <a class="hash-link" href="docs/upgrading.html#1-upgrade-the-react-native-dependency">#</a></h3><p>Note the latest version of the <code>react-native</code> npm package from here (or use <code>npm info react-native</code> to check):</p><ul><li><a href="https://www.npmjs.com/package/react-native">https://www.npmjs.com/package/react-native</a></li></ul><p>Now install that version of <code>react-native</code> in your project with <code>npm install --save</code>:</p><div class="prism language-javascript">$ npm install <span class="token operator">--</span>save react<span class="token operator">-</span>native@X<span class="token punctuation">.</span>Y
# where X<span class="token punctuation">.</span>Y is the semantic version you are upgrading to
npm WARN peerDependencies The peer dependency react@<span class="token operator">~</span>R included from react<span class="token operator">-</span>native<span class="token punctuation">.</span><span class="token punctuation">.</span><span class="token punctuation">.</span></div><p>If you saw a warning about the peerDependency, also upgrade <code>react</code> by running:</p><div class="prism language-javascript">$ npm install <span class="token operator">--</span>save react@R
# where R is the <span class="token keyword">new</span> <span class="token class-name">version</span> of react from the peerDependency warning you saw</div><h3><a class="anchor" name="2-upgrade-your-project-templates"></a>2. Upgrade your project templates <a class="hash-link" href="docs/upgrading.html#2-upgrade-your-project-templates">#</a></h3><p>The new npm package may contain updates to the files that are normally generated when you
run <code>react-native init</code>, like the iOS and the Android sub-projects.</p><p>You may consult <a href="https://github.com/ncuillery/rn-diff" target="_blank">rn-diff</a> to see if there were changes in the project template files.
In case there weren't any, simply rebuild the project and continue developing. In case of minor changes, you may update your project manually and rebuild.</p><p>If there were major changes, run this in a terminal to get these:</p><div class="prism language-javascript">$ react<span class="token operator">-</span>native upgrade</div><p>This will check your files against the latest template and perform the following:</p><ul><li>If there is a new file in the template, it is simply created.</li><li>If a file in the template is identical to your file, it is skipped.</li><li>If a file is different in your project than the template, you will be prompted; you have options
to keep your file or overwrite it with the template version.</li></ul><h1><a class="anchor" name="manual-upgrades"></a>Manual Upgrades <a class="hash-link" href="docs/upgrading.html#manual-upgrades">#</a></h1><p>Some upgrades require manual steps, e.g. 0.13 to 0.14, or 0.28 to 0.29. Be sure to check the <a href="https://github.com/facebook/react-native/releases" target="_blank">release notes</a> when upgrading so that you can identify any manual changes your particular project may require.</p></div><div class="docs-prevnext"><a class="docs-prev" href="docs/understanding-cli.html#content">← Prev</a><a class="docs-next" href="docs/platform-specific-code.html#content">Next →</a></div><p class="edit-page-block">You can <a target="_blank" href="https://github.com/facebook/react-native/blob/master/docs/Upgrading.md">edit the content above on GitHub</a> and send us a pull request!</p>